--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.mohyeddin.passwordmanager"
         minSdkVersion 18
         targetSdkVersion 30
-        versionCode 6
-        versionName "1.1.3"
+        versionCode 7
+        versionName "2.0.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -20,6 +20,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    buildFeatures{
+        viewBinding true
     }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -36,19 +39,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'net.zetetic:android-database-sqlcipher:4.4.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'io.github.inflationx:calligraphy3:3.1.1'
     implementation 'io.github.inflationx:viewpump:2.0.3'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
-    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
-    implementation('com.google.api-client:google-api-client-android:1.26.0') {
+    implementation 'com.google.http-client:google-http-client-gson:1.39.2'
+    implementation('com.google.api-client:google-api-client-android:1.31.5') {
         exclude group: 'org.apache.httpcomponents'
     }
-    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+    implementation('com.google.apis:google-api-services-drive:v3-rev20210524-1.31.0') {
         exclude group: 'org.apache.httpcomponents'
     }
     testImplementation 'junit:junit:4.13.2'
